# firefly-mcp

./: .env.example  .gitignore  Dockerfile  README.md  firefly_client.py  pyproject.toml  server.py
import-configs/: sb1-bil.json  sb1-boligutgifter.json  sb1-brukskonto.json  sb1-bryllup.json  sb1-bufferkonto-familie.json  sb1-bufferkonto-marius.json  sb1-egenkapital.json  sb1-fellesutgifter.json  sb1-feriepenger.json  sb1-gabriel.json
scripts/: setup_firefly_accounts.sh
