[project]
name = "firefly-mcp"
version = "0.1.0"
description = "MCP server for Firefly III REST API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.6.0",
    "httpx>=0.27.0",
]

[project.scripts]
firefly-mcp = "server:main"

[tool.hatch.build.targets.wheel]
sources = ["."]
include = ["server.py", "firefly_client.py"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
